syntax = "proto3";

package dnakano.microservice_handson.gateway;

option go_package = "github.com/dai65527/microservice-handson/services/gateway/proto";

import "google/api/annotations.proto";
import "services/authority/proto/authority.proto";
import "services/catalog/proto/catalog.proto";

service GatewayService {
  rpc Signup(authority.SigninRequest) returns (authority.SigninResponse) {
    option (google.api.http) = {
      post: "/signup"
      body: "*"
    };
  }

  rpc Signin(authority.SigninRequest) returns (authority.SigninResponse){
    option (google.api.http) = {
      post: "/auth/signin"
      body: "*"
    };
  }

  rpc CreateItem(catalog.CreateItemRequest) returns (catalog.CreateItemResponse){
    option (google.api.http) = {
      post: "/catalog/items"
      body: "*"
    };
  }

  rpc GetItem(catalog.GetItemRequest) returns (catalog.GetItemResponse){
    option (google.api.http) = {
      get: "/catalog/items/{id}"
    };
  }

  rpc ListItems(catalog.ListItemsRequest) returns (catalog.ListItemsResponse){
    option (google.api.http) = {
      get: "/catalog/items"
    };
  }
}

message SigninRequest {
  string name = 1;
}

message SigninResponse {
  string access_token = 1;
}

message GetItemRequest {
  string id = 1;
}

message GetItemResponse {
  string access_token = 1;
}
